<resources>
    <string name="app_name">Jula</string>
    <string name="registerButton">Registrieren</string>
    <string name="LoginButton">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="Email">E-Mail</string>
    <string name="email_confirm">E-Mail bestätigen</string>
    <string name="Password">Passwort</string>
    <string name="password_confirm">Passwort bestätigen</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_home_not_logged_in">Home_not_logged_in</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registerInfo">Erstelle einen neuen Account!</string>
    <string name="profile">Mein Account</string>
    <string name="awards">Meine Auszeichungen</string>
    <string name="logout">Logout</string>
    <string name="Apptitle">Jula - Beispielstandort</string>
    <string name="add">Hinzufügen</string>
    <string name="delete">löschen</string>
    <string name="PollTitle">Titel der Umfrage</string>
    <string name="PollText">Beschreibung</string>
    <string name="answers">Antwortmöglichkeiten (max 4)</string>
    <string name="AddPoll">Umfrage hinzufügen</string>
    <string name="sendPoll">Absenden</string>
    <string name="vote">Abstimmen</string>
    <string name="result">Ergebnisse</string>
    <string name="putAnswerOptions">Antwortmöglichkeiten...</string>
</resources>